--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-%form{ :action => "/", :method => :post }
+%form{ :action => '/', :method => :post }
   %input{ :type => :hidden, :name => 'company', :value => @company }
   Does 
   %input{ :type => :text, :name => 'name' }
