Renamed company.js to form.js since it handles the form submission.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,4 +6,4 @@
     .container= yield
 
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
-    %script{src: "/javascripts/company.js"}
+    %script{src: "/javascripts/form.js"}
